Fixing cutoff gradient in main content area

--- a/wp-content/themes/twentyfifteen-child/style.css
+++ b/wp-content/themes/twentyfifteen-child/style.css
@@ -10,6 +10,10 @@
 
 /* general styling */
 
+html {
+	min-height: 100%;
+}
+
 h2 {
 	margin-top: 1.5em;
 	font-family: 'Pacifico', cursive !important;
@@ -37,6 +41,7 @@ body {
 	font-family: 'Muli', sans-serif !important;
 	color: #131516 !important;
 	line-height: 1.3 !important;
+	height: 100%;
 }
 
 a { 
